Fixed panel wrapping behavior, fixed issue #8

--- a/src/scripts/student-profile/sass/test-results.scss
+++ b/src/scripts/student-profile/sass/test-results.scss
@@ -23,4 +23,9 @@
   .test-score, .test-score-name {
     font-size: 14px;
   }
+
+}
+
+.grade-result-list .col-md-3:nth-child(4n+1) {
+  clear: both;
 }
